[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/house3.png" type="Texture" id=1]
[ext_resource path="res://art/house4.png" type="Texture" id=2]
[ext_resource path="res://art/house2.png" type="Texture" id=3]
[ext_resource path="res://art/house1.png" type="Texture" id=4]
[ext_resource path="res://src/House.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "destroyed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.10052, 8.20284 )

[node name="House" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "destroyed"

[node name="BodyArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionArea" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )
[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
